# opc_game_sim

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TASK.md  build-windows.sh  build.bat  build.sh  build.txt  config.yaml  generate_test_sound.py  vcpkg.json
.github/workflows/: build.yml  code-quality.yml  release.yml  test.yml
assets/sprites/TEST/: testFloor1.sprite.json  testObj.sprite.json  testObjAnimation.sprite.json
assets/sprites/industrial/: conveyor_belt.sprite.json
docs/: ANIMATION_SYSTEM_JSON.md  ARCHITECTURE.md  CODE_REVIEW_PHASE_1.md  EVENTBUS_IMPLEMENTATION.md  MILESTONE_1_1_STATE_SYSTEM.md  MILESTONE_1_2_ECS_INTEGRATION.md  MILESTONE_1_3_TILE_SYSTEM_MAJOR_ISSCUES_0112.md  MILESTONE_2.1_PHYSICS.md  SPRITE_METADATA.md  WINDOWS_BUILD.md
docs/archive/: CODE_REVIEW_MILESTONE_1_1.md  CODE_REVIEW_MILESTONE_1_2.md  CODE_REVIEW_PHASE_1.md  ECS_COMPONENTS.md  FIXES_CRITICAL_ISSUES.md  FIXES_MAJOR_ISSUES.md  MILESTONE_1_1_GAME_LOOP.md  MILESTONE_1_1_INPUT_MANAGER.md  MILESTONE_1_3_TILE_SYSTEM.md  SETUP.md
examples/: EventBusExample.cpp  async_resource_loading_example.cpp
include/core/: AnimationData.h  Application.h  AudioManager.h  Components.h  Config.h  EventBus.h  InputManager.h  Logger.h  PerformanceMetrics.h  ResourceManager.h  SpriteMetadata.h  State.h  StateManager.h  Window.h
include/core/states/: GameState.h  MenuState.h  PauseState.h  SettingsState.h
include/core/systems/: AnimationSystem.h  AnimationSystemV2.h  CollisionSystem.h  FSMSystem.h  ISystem.h  LifetimeSystem.h  OverlaySystem.h  RenderSystem.h  SystemScheduler.h  TilePositionSystem.h  UpdateSystem.h
include/rendering/: PhysicsDebugDraw.h  TileMapSystem.h
include/simulation/: PhysicsBodyFactory.h  PhysicsComponents.h  PhysicsEventProcessor.h  PhysicsThread.h  PhysicsTransformBuffer.h  PhysicsWorld.h
include/simulation/events/: CollisionEvents.h
include/simulation/systems/: PhysicsSystem.h
src/: main.cpp
src/core/: AnimationData.cpp  Application.cpp  AudioManager.cpp  CMakeLists.txt  Components.cpp  Config.cpp  EventBus.cpp  InputManager.cpp  Logger.cpp  PerformanceMetrics.cpp  ResourceManager.cpp  SpriteMetadata.cpp  State.cpp  StateManager.cpp  Window.cpp
src/core/states/: GameState.cpp  MenuState.cpp  PauseState.cpp  SettingsState.cpp
src/core/systems/: AnimationSystem.cpp  AnimationSystemV2.cpp  CollisionSystem.cpp  FSMSystem.cpp  LifetimeSystem.cpp  OverlaySystem.cpp  RenderSystem.cpp  SystemScheduler.cpp  TilePositionSystem.cpp  UpdateSystem.cpp
src/editor/: CMakeLists.txt
src/industrial/: CMakeLists.txt
src/rendering/: CMakeLists.txt  PhysicsDebugDraw.cpp  TileMapSystem.cpp
src/scripting/: CMakeLists.txt
src/simulation/: CMakeLists.txt  PhysicsBodyFactory.cpp  PhysicsEventProcessor.cpp  PhysicsThread.cpp  PhysicsTransformBuffer.cpp  PhysicsWorld.cpp
src/simulation/systems/: PhysicsSystem.cpp
src/ui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_placeholder.cpp
tests/unit/: CMakeLists.txt  test_collision_events.cpp  test_collision_system.cpp  test_config.cpp  test_fsm_system.cpp  test_logger.cpp  test_physics_body_factory.cpp  test_physics_debug_draw.cpp  test_physics_system.cpp  test_physics_thread.cpp  test_physics_world.cpp  test_resource_manager.cpp  test_sprite_metadata.cpp  test_tile_position_component.cpp  test_tile_position_system.cpp
